--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,9 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 thiserror = "2.0.17"
 glob = "0.3.3"
+regex = "1.12.2"
+
+[dev-dependencies]
+ast-grep-core = "0.40.0"
+ast-grep-language = "0.40.0"
+tempfile = "3.23.0"
