--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = "1.0.145"
 thiserror = "2.0.17"
 glob = "0.3.3"
 regex = "1.12.2"
+toml = "0.8"
 
 [dev-dependencies]
 tempfile = "3.23.0"
